add greedy findOccrence backtracking 2

--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <title>Algorithm In JS</title>
     <!-- <script src="./js/array.js" type="text/javascript" defer></script> -->
     <!-- <script src="./js/sort.js" type="text/javascript" defer></script> -->
-    <script src="./js/tree.js" type="text/javascript" defer></script>
+    <!-- <script src="./js/tree.js" type="text/javascript" defer></script>-->
+    <!-- <script src="./js/greedy.js" type="text/javascript" defer></script>-->
+    <script src="./js/backtracking.js" type="text/javascript" defer></script>
 </head>
 <body>
     
