--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Algorithm In JS</title>
-    <!-- <script src="./js/array.js" type="text/javascript" defer></script> -->
-    <!-- <script src="./js/sort.js" type="text/javascript" defer></script> -->
-    <!-- <script src="./js/tree.js" type="text/javascript" defer></script>-->
-    <!-- <script src="./js/greedy.js" type="text/javascript" defer></script>-->
-    <script src="./js/backtracking.js" type="text/javascript" defer></script>
+<!--     <script src="./js/data-structures/array.js" type="text/javascript" defer></script> -->
+<!--     <script src="js/algorithms/sort.js" type="text/javascript" defer></script> -->
+<!--     <script src="js/data-structures/tree.js" type="text/javascript" defer></script>-->
+<!--     <script src="js/algorithms/greedy.js" type="text/javascript" defer></script>-->
+<!--     <script src="js/algorithms/backtracking.js" type="text/javascript" defer></script> -->
+<!--     <script src="./js/test.js" type="text/javascript" defer></script>-->
+<!--     <script src="js/data-structures/linkedList.js" type="text/javascript" defer></script>-->
 </head>
 <body>
     
